oop_mro/tests/trybuild/fail_unsupported_method.stderr
error: async methods are not supported
 --> tests/trybuild/fail_unsupported_method.rs:5:9
  |
5 |         async fn speak(&self) -> String {
  |         ^^^^^
